[FIX] FIX BUGS
